--- a/mum-call-for-code-main/webApp/frontend/web-app/src/app/toolbar/toolbar.component.html
+++ b/mum-call-for-code-main/webApp/frontend/web-app/src/app/toolbar/toolbar.component.html
@@ -9,7 +9,12 @@
     <mat-toolbar color="primary" style="background-color: #131620;position: sticky;top: 0;
     z-index: 1;">
 
-      <span><a class="topBarBtns" routerLink="homepage">P2P Optimal Energy Trading</a></span>
+      <span>
+        <a class="topBarBtns" routerLink="homepage">
+          TransXEnergy
+
+        </a>
+      </span>
       <span class="spacer"></span>
       <div fxShow="true" fxHide.lt-md="true">
 
