--- a/mum-call-for-code-main/webApp/frontend/web-app/src/app/open-requests-page/open-requests-page.component.html
+++ b/mum-call-for-code-main/webApp/frontend/web-app/src/app/open-requests-page/open-requests-page.component.html
@@ -1,41 +1,28 @@
-<div *ngIf="noOpenBuyRequests" style="margin-left: 10px; width: 95%; height: 100%;">
-    <h2>No buy requests available</h2>
-</div>
-<div *ngIf="!noOpenBuyRequests" style="margin-left: 10px; width: 95%; height: 100%;overflow: hidden;"> 
-    <table mat-table [dataSource]="openRequestDataSource">
+
+<div style="margin-left: 10px; width: 95%; height: 100%;overflow: hidden;"> 
+    <table mat-table [dataSource]="energyRequestDataSource">
         
         <!-- buyer info -->
-        <ng-container matColumnDef="buyer">
-            <th mat-header-cell *matHeaderCellDef> Buyer </th>
-            <td mat-cell *matCellDef="let element"> {{element.buyer}} </td>
+        <ng-container matColumnDef="energy">
+            <th mat-header-cell *matHeaderCellDef> Energy (kWh) </th>
+            <td mat-cell *matCellDef="let element"> {{element.energy}} </td>
         </ng-container>
 
         <!-- energyAmount info -->
-        <ng-container matColumnDef="energyAmount">
-            <th mat-header-cell *matHeaderCellDef> Energy Amount (kWh) </th>
-            <td mat-cell *matCellDef="let element"> {{element.energyAmount}} </td>
+        <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef> Price (RM) </th>
+            <td mat-cell *matCellDef="let element"> {{element.price}} </td>
         </ng-container>
 
 
         <!-- fiatAmount info -->
-        <ng-container matColumnDef="fiatAmount">
-            <th mat-header-cell *matHeaderCellDef> Fiat Amount (RM) </th>
-            <td mat-cell *matCellDef="let element"> {{element.fiatAmount}} </td>
-        </ng-container>
-
-        <!-- fiatAmount info -->
-        <ng-container matColumnDef="reqId">
-            <th mat-header-cell *matHeaderCellDef> Request Id </th>
-            <td mat-cell *matCellDef="let element"> {{element.reqId}} </td>
+        <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef> Request Type </th>
+            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
         </ng-container>
 
 
-        <!-- remaining time info -->
-        <ng-container matColumnDef="remTime">
-            <th mat-header-cell *matHeaderCellDef> Elapsed Time </th>
-            <td mat-cell *matCellDef="let element"> {{element.remTime}} </td>\
-            <!-- <td mat-cell *matCellDef="let element"> 30 minutes elapsed </td> -->
-        </ng-container>
+
 
          <!-- bid button -->
          <ng-container matColumnDef="bidBtn">
@@ -47,8 +34,8 @@
             
         </ng-container>
     
-        <tr mat-header-row *matHeaderRowDef="openedRequestDisplayedCols"></tr>
-        <tr mat-row *matRowDef="let row; columns: openedRequestDisplayedCols;"></tr>
+        <tr mat-header-row *matHeaderRowDef="energyRequestDisplayedCols"></tr>
+        <tr mat-row *matRowDef="let row; columns: energyRequestDisplayedCols;"></tr>
 
     </table>
     <mat-paginator 
