Minor UI update

--- a/mum-call-for-code-main/webApp/frontend/web-app/src/app/new-market-page/new-market-page.component.html
+++ b/mum-call-for-code-main/webApp/frontend/web-app/src/app/new-market-page/new-market-page.component.html
@@ -10,7 +10,7 @@
                         <img class="images" src="../../assets/EnergyTrading.png" style="height: 5%; width: 5%; display: inline-flex; opacity: 0.9;">
 
                     </h2>
-                    <h3 style="font-size: 20px; color: #5B667C;">All open requests will be closed every 30 minutes</h3>
+                    <h3 style="font-size: 20px; color: #5B667C;">Customer Matching will run every 30 minutes</h3>
                 </div>
             </div>
         </div>
