--- a/mum-call-for-code-main/webApp/frontend/web-app/src/app/blockchain-page/blockchain-page.component.html
+++ b/mum-call-for-code-main/webApp/frontend/web-app/src/app/blockchain-page/blockchain-page.component.html
@@ -54,21 +54,16 @@
             <ng-container matColumnDef="hash">
               <th mat-header-cell *matHeaderCellDef> Hash </th>
               <td mat-cell *matCellDef="let element"> {{element.hash}}   
-                <a mat-button style="text-decoration: none;" (click)="showBlockData(element.hash)"><mat-icon>info</mat-icon></a>
+                <a mat-button style="text-decoration: none;" (click)="showBlockInfo(element.data)"><mat-icon>info</mat-icon></a>
               </td>
             </ng-container>
         
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="nonce">
-              <th mat-header-cell *matHeaderCellDef> Previous Hash </th>
-              <td mat-cell *matCellDef="let element"> {{element.prevHash}} </td>
-            </ng-container>
         
       
                   <!-- Symbol Column -->
               <ng-container matColumnDef="prevHash">
-                  <th mat-header-cell *matHeaderCellDef> Nonce </th>
-                  <td mat-cell *matCellDef="let element"> {{element.nonce}} </td>
+                  <th mat-header-cell *matHeaderCellDef> Previous Hash </th>
+                  <td mat-cell *matCellDef="let element"> {{element.prevHash}} </td>
               </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
